fix compilation for jdk8